Add the correct notebook.

--- a/lab_2/python-essentials.ipynb
+++ b/lab_2/python-essentials.ipynb
@@ -44,9 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
     "print ('Hello, World!')"
    ]
@@ -123,19 +131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-f /home/stz/.local/share/jupyter/runtime/kernel-b9538b8e-aed8-4364-ac29-34f8ace8150f.json\n"
+      "-f /home/stz/.local/share/jupyter/runtime/kernel-31339a99-939f-4fa7-8338-c1ac66deace8.json\n"
      ]
     }
    ],
    "source": [
-    "# exercise.py\n",
+    "#! /usr/bin/env python3\n",
+    "# about.py\n",
     "    \n",
     "import sys\n",
     "\n",
@@ -151,10 +160,234 @@
    "metadata": {},
    "source": [
     "```bash\n",
-    "shell> python3 exercise.py blue dog\n",
+    "shell> python3 about.py blue dog\n",
     "\n",
     "My favorite color is Blue and I am a dog person.\n",
-    "```"
+    "```\n",
+    "\n",
+    "You can also run the script directly on UNIX based platforms: MacOS, Linux, BSD.\n",
+    "Provided you have the shebang header and the file is executable (chmod +x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Usefull Methods:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'zz' in 'pizza'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1990.01.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split\n",
+    "name, birth_date, location = 'Joe,1990.01.01,London'.split(',')\n",
+    "print (birth_date)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### strip + rstrip + lstrip\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bad \n",
+      "   bad\n",
+      "bad\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('   bad '.lstrip())\n",
+    "print ('   bad '.rstrip())\n",
+    "print ('   bad '.strip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### lower + upper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WONKY\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = 'WoNkY'\n",
+    "if data.lower() == 'wonky':\n",
+    "    print (data.upper())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bob\n",
+      "joe\n",
+      "tom\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = 'bob', 'joe', 'tom'\n",
+    "print ('\\n'.join(names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The rain in Spain stays mainly on the plains.'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'The {} in {country} stays mainly on the {place}.'.format('rain', country='Spain', place=\"plains\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### replace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, students!'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Hello, world'.replace('world', 'students!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### startswith + endswith"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Popescu is a Romanian name\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Popescu'\n",
+    "if name.endswith('escu'):\n",
+    "    print (f\"{name} is a Romanian name\")"
    ]
   },
   {
@@ -224,6 +457,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Excercise\n",
+    "\n",
+    "Write an python script called `cat.py`. Given an input parameter it print the contents of that file.\n",
+    "\n",
+    "> cat.py haiku.txt\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -247,6 +491,665 @@
     "\n",
     "write_file(filename, f'{data}')\n",
     "print_file(filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42 + 100 142\n",
+      "\"foo\" + \"bar\" foobar\n",
+      "[1] + [2] [1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "print ('42 + 100', add(42, 100))\n",
+    "print ('\"foo\" + \"bar\"', add('foo', 'bar'))\n",
+    "print ('[1] + [2]', add([1], [2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n",
+      "{}\n",
+      "(1,)\n",
+      "{}\n",
+      "(42,)\n",
+      "{'foo': 'bar'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def function(*args, **kwargs):\n",
+    "    print (args)\n",
+    "    print (kwargs)\n",
+    "    \n",
+    "function()\n",
+    "function(1)\n",
+    "function(42, foo='bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## conditionals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "if cond1:\n",
+    "    \"<true-branch>\"\n",
+    "elif cond2:\n",
+    "    \"<elif-branch>\"\n",
+    "else:\n",
+    "    \"<else-branch>\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [truthyness](https://docs.python.org/3/library/stdtypes.html#truth-value-testing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These onsidered falsey:\n",
+    " - None and False.\n",
+    " - zeros: 0, 0.0, 0j, Decimal(0), Fraction(0, 1)\n",
+    " - empty bags: '', (), [], {}, set(), range(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lists and Tuples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_list = [1, 2, 3, 4]\n",
+    "numeric_tuple = (42, 41, 9)\n",
+    "mixed = [1, 2, (3, )]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### lookup and slices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bear\n",
+      "['dog', 'goldfish', 'octokitty']\n",
+      "octokitty\n",
+      "['goldfish', 'octokitty']\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = ['bear', 'dog', 'goldfish', 'octokitty']\n",
+    "print (items[0])\n",
+    "print (items[1:])\n",
+    "print (items[-1])\n",
+    "print (items[-2:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### append"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1, 2]\n",
+    "nums.append(3)\n",
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### extend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1, 2]\n",
+    "nums.extend([3, 4])\n",
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1988', '2000', '2007', '2011']"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "years = ['2011', '1988', '2000', '2007']\n",
+    "years.sort()\n",
+    "years"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### reverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 2, 1]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value = [1, 2, 3]\n",
+    "value.reverse()\n",
+    "value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sorted + reverse\n",
+    "same as mutable functions but return a new copy of the list each time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### iteration and processing\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "for value in numbers:\n",
+    "    total += value\n",
+    "    \n",
+    "print(total)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "Write a function that multiplies each list value by -1\n",
+    "```python\n",
+    "negate([1, 2, 3])\n",
+    "[-1, -2, -3]\n",
+    "negate([-3, 0, 42])\n",
+    "[3, 0, -42]\n",
+    "negate([])\n",
+    "[]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = ['42', 0, True, None, '', 9000]\n",
+    "for item in items:\n",
+    "    if item:\n",
+    "        print (item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2009 Ox\n",
+      "2010 Tiger\n",
+      "2011 Rabbit\n",
+      "2012 Dragon\n",
+      "2013 Snake\n",
+      "2014 Horse\n",
+      "2015 Goat\n",
+      "2016 Monkey\n",
+      "2017 Rooster\n",
+      "2018 Dog\n",
+      "2019 Pig\n",
+      "2020 Rat\n"
+     ]
+    }
+   ],
+   "source": [
+    "animals = ['Ox', 'Tiger', 'Rabbit', 'Dragon', 'Snake', 'Horse', 'Goat', 'Monkey', 'Rooster', 'Dog', 'Pig', 'Rat']\n",
+    "years = [2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020]\n",
+    "for index, animal in enumerate(animals):\n",
+    "    print (years[index], animal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "Write a program that takes a year as an argument and prints the Chinese Animal.\n",
+    "\n",
+    "```bash\n",
+    "shell> python3 zodiac.py 1990\n",
+    "Horse\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "capitals = {\n",
+    "    'Timis': 'Timisoara',\n",
+    "    'Bihor': 'Oradea',\n",
+    "    'Arad': 'Arad',\n",
+    "    'Hunedoara': 'Deva',\n",
+    "    'Caras-Severin': 'Resita',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lookup [] and Assingment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Deva'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "capitals['Hunedoara']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Unknown'"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "capitals.get('Alba', 'Unknown')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Alba Iulia'"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "capitals['Alba'] = 'Alba Iulia'\n",
+    "capitals.get('Alba', 'Unknown')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### items values keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('Timisoara', 'Timis'), ('Oradea', 'Bihor'), ('Arad', 'Arad'), ('Deva', 'Hunedoara'), ('Resita', 'Caras-Severin')])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "capitals.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['Timis', 'Bihor', 'Arad', 'Hunedoara', 'Caras-Severin'])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "capitals.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Timisoara', 'Oradea', 'Arad', 'Deva', 'Resita'])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "capitals.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timis -> Timisoara\n",
+      "Bihor -> Oradea\n",
+      "Arad -> Arad\n",
+      "Hunedoara -> Deva\n",
+      "Caras-Severin -> Resita\n"
+     ]
+    }
+   ],
+   "source": [
+    "for county, city in capitals.items():\n",
+    "    print (f'{county} -> {city}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise:\n",
+    "Strings are iterable just a lists, write a function that returns the letter count of a longer string:\n",
+    "\n",
+    "``` python\n",
+    "\n",
+    "letter_count('Python gives you superpowers.')\n",
+    "\n",
+    "{'p': 3,\n",
+    " 'y': 2,\n",
+    " 't': 1,\n",
+    " 'h': 1,\n",
+    " 'o': 3,\n",
+    " 'n': 1,\n",
+    " ' ': 3,\n",
+    " 'g': 1,\n",
+    " 'i': 1,\n",
+    " 'v': 1,\n",
+    " 'e': 3,\n",
+    " 's': 3,\n",
+    " 'u': 2,\n",
+    " 'r': 2,\n",
+    " 'w': 1,\n",
+    " '.': 1}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise:\n",
+    "Write a function that returnes the reverse of the capitals\n",
+    "```python\n",
+    "judet('Timisoara')\n",
+    "Timis\n",
+    "\n",
+    "judet('Deva')\n",
+    "Hunedoara\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modules"
    ]
   },
   {
